--- a/Fundamentos_Web/Atividade_Primeiro_HTML+CSS/index.html
+++ b/Fundamentos_Web/Atividade_Primeiro_HTML+CSS/index.html
@@ -51,7 +51,7 @@
 
         <div class="post1">
             <header>
-                <h3 align="center" class="post_title1">NÓS   SOMOS   VALORANT</h3> 
+                <h3 align="center" class="post_title1">SOMOS   VALORANT</h3> 
             </header>
            
         </div>
