--- a/Fundamentos_Web/Projeto Instagram/index.html
+++ b/Fundamentos_Web/Projeto Instagram/index.html
@@ -8,11 +8,11 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="https://github.com/SpruceGabriela/instagram-dio/blob/master/img/instagram-celular.png?raw=true" alt="celular">
+            <img src="assets/img/instagram-celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="https://github.com/SpruceGabriela/instagram-dio/blob/master/img/instagram-logo.png?raw=true" class="instagram-logo" alt="instagram logo">
+                <img src="assets/img/LOGO_Instagram.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
                     <img src="assets/img/eu.jpeg" alt="foto de perfil">
                 </div>
