Atualização no dropdown

--- a/Bootstrap/Leading Page Digimon/index.html
+++ b/Bootstrap/Leading Page Digimon/index.html
@@ -90,17 +90,17 @@
             aria-haspopup="true" aria-expanded="false">
             Digimons
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="https://digitalmonster.fandom.com/pt/wiki/Lista_de_Espécies"
-              target="_blank">Espécies</a>
-          </div>
+          <ul class="dropdown-menu mt-2" aria-labelledby="navbarDropdown">
+           <li><a class="dropdown-item" href="https://digitalmonster.fandom.com/pt/wiki/Lista_de_Espécies"
+              target="_blank">Espécies</a></li>
+           </ul>
         </li>
         <li class="nav-item dropdown">
           <a style="color: black;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Anime
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu mt-2" aria-labelledby="navbarDropdown">
 
 
             <li><a class="dropdown-item" href="https://meusanimes.org/animes/digimon-adventure-dublado-dublado"
@@ -128,7 +128,7 @@
             aria-haspopup="true" aria-expanded="false">
             Mangá
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu mt-2" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="hhttps://mangalivre.net" target="_blank">Mangá Livre</a>
           </div>
         </li>
@@ -139,7 +139,7 @@
             aria-haspopup="true" aria-expanded="false">
             Outros
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu mt-2" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="https://world.digimoncard.com/cardlist/?search=true&category=522006"
               target="_blank">Lista de Card</a>
           </div>
@@ -423,6 +423,9 @@
   <!--rodapé-->
 </body>
   <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS --> 
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
   <script src="assets/js/script.js"></script>
 
 
