--- a/Bootstrap/Landing Page Digimon/index.html
+++ b/Bootstrap/Landing Page Digimon/index.html
@@ -16,7 +16,7 @@
     }
 
     body {
-      background: url(https://static.wikia.nocookie.net/digimon/images/f/f1/Digimon_World_-next_0rder-_Poster.jpg/revision/latest?cb=20150817164440) no-repeat center center fixed;
+      background-image: url(https://static.wikia.nocookie.net/digimon/images/f/f1/Digimon_World_-next_0rder-_Poster.jpg/revision/latest?cb=20150817164440) no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -73,7 +73,7 @@
   <!--barra de navegação MENU -->
   <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <img width="60px"
-      src="https://static.wikia.nocookie.net/liberproeliis/images/e/e2/Unnamed-1486754993.png/revision/latest?cb=20170210192953&path-prefix=pt-br"
+      src="assets/img/Unnamed-1486754993.png"
       alt=""></img>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
       aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -412,7 +412,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.8); color: #FFF;">
-      © 2021 Copyright:
+      © 2022 Copyright:
       <a class="text-copyright" style="color: #FFF;" href="https://mdbootstrap.com/">Erika Sayuri</a>
     </div>
     <!-- Copyright -->
